# microsoft-translator

./: .travis.yml  ChangeLog.md  LICENSE  README.md  microsoft-translator.cabal  stack.yaml
src/: Translator.hs  TranslatorExample.hs
src/Microsoft/: Translator.hs  TranslatorExample.hs
src/Microsoft/Translator/: API.hs  API3.hs  Exception.hs  Language.hs
src/Microsoft/Translator/API/: Auth.hs
src/Translator/: API.hs  Exception.hs  Language.hs
src/Translator/API/: Auth.hs  Client.hs  Types.hs
src/Translator/API/Auth/: Client.hs  Types.hs
